--- a/Game/Antwerpen Snake/Assembly-CSharp-vs.csproj
+++ b/Game/Antwerpen Snake/Assembly-CSharp-vs.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\01 Scripts\Navbar.cs" />
+     <Compile Include="Assets\01 Scripts\PanelProject.cs" />
      <Compile Include="Assets\01 Scripts\Snake.cs" />
      <Compile Include="Assets\01 Scripts\StartScreenAndInstructionButtons.cs" />
      <Compile Include="Assets\01 Scripts\testforpopup.cs" />
